style: revert navbar structure to right-aligned links and add media query scaling to prevent wrapping on 1366px screen resolutions

--- a/src/app/components/custom-navbar/custom_navbar.css
+++ b/src/app/components/custom-navbar/custom_navbar.css
@@ -362,6 +362,20 @@
     width: 180px !important;
     height: 50px;
   }
+
+  .navbar a {
+    font-size: 14px !important;
+  }
+
+  .navbar ul li {
+    margin-right: 5px !important;
+    padding-right: 5px !important;
+  }
+
+  .navbar .btn_primary_btn {
+    font-size: 14px !important;
+    padding: 4px 10px !important;
+  }
 }
 
 @media screen and (max-width: 1200px) {
